[metadata]
name = pysdrweb
author = eulersIDcrisis
author_email = eulersidcrisis@yahoo.com
description = Server to host FM Radio via RTL-SDR utilities.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/eulersIDcrisis/pysdrweb
project_urls =
    Bug Tracker = https://github.com/eulersIDcrisis/pysdrweb/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Telecommunications Industry
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX
    Topic :: Communications :: Ham Radio
    Topic :: Multimedia :: Sound/Audio
    Topic :: Multimedia :: Sound/Audio :: Players

[options]
package_dir =
    = pysdrweb
packages = find:
python_requires = >=3.7

[options.packages.find]
where = pysdrweb