[metadata]
name = pysdrweb
version = 0.3.0
author = eulersIDcrisis
author_email = eulersidcrisis@yahoo.com
description = Server to host FM Radio via RTL-SDR utilities.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/eulersIDcrisis/pysdrweb
project_urls =
    Bug Tracker = https://github.com/eulersIDcrisis/pysdrweb/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Telecommunications Industry
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX
    Topic :: Communications :: Ham Radio
    Topic :: Multimedia :: Sound/Audio
    Topic :: Multimedia :: Sound/Audio :: Players

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
include_package_data = true


install_requires =
    # Require 'tornado', minimum version of 6.0.1
    # Could possibly waive this to tornado 5.X, not sure.
    tornado>=6.0.1
    PyYAML>=5.4.1
    click>=5.0.0
    # SoundFile might require libsnd to be installed manually.
    # We _could_ make this dependency optional, possibly, but
    # 'native' python sound formats are uncompressed and quite
    # large.
    SoundFile>=0.10.0

[options.extras_require]
# NOTE: 'lameenc' is GPL-licensed, and also is not always immediately
# available (i.e. needs to be compiled) so include it as an extra.
mp3 = lameenc>=1.3.0

[options.packages.find]
where = src

# Set the data files that should be included in the distribution.
[options.package_data]
* = src/pysdrweb/data/*

[options.entry_points]
console_scripts =
    sdrfm_server = pysdrweb.fmserver.server:fm_server_command

